--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
   },
   "include": [
     "**/*.ts",
@@ -15,3 +17,4 @@
     "expo-env.d.ts"
   ]
 }
+
