--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-image": "~2.3.2",
     "expo-linking": "~7.1.6",
     "expo-router": "~5.1.2",
+    "expo-screen-orientation": "^8.1.7",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
